--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 बिजली बचाओ योजना</em></strong></u> </h3> 
     <img class="inset" src="jenil.png" width="300" height="300" background: darkblue;/></h4>
     <h4>नमस्ते मैं जेनिल पंचानी हूँ<br>
-    I am student of shivashish world school,this website is made to aware all the citizens of pride India.<br>
-    Do what's right, turn off the light! 
+   मैं शिवाशीष वर्ल्ड स्कूल का छात्र हूँ, यह वेबसाइट गौरव भारत के सभी नागरिकों को जागरूक करने के लिए बनाई गई है।<br>
+    बिना लाइट के अब सब कंगाल, चारो तरफ मचेगा बबाल।
 
     <h3><u><strong><em>
        हमें बिजली क्यों बचानी चाहिए: हमें हर पल और जीवन के हर क्षेत्र में बिजली की आवश्यकता होती है। बिजली है<br>
